<resources>
    <string name="app_name">My Places</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Hello,</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_places">My Places</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="new_user">New User</string>
    <string name="my_favorites">My Favorites</string>
    <string name="pizza_in_haifa">pizza in haifa</string>
    <string name="radius_m">Radius (m)</string>
    <string name="_1000">1000</string>
    <string name="near_me">Near Me</string>
    <string name="_0_0">0.0</string>
    <string name="search">Search</string>
    <string name="map">Map</string>
    <string name="favorites">Favorites</string>
    <string name="other">Other</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="splashactivity">SplashActivity</string>

    <string-array name="types_spinner">
        <item>Airport</item>
        <item>Amusement Park</item>
        <item>Atm</item>
        <item>Art Gallery</item>
        <item>Bakery</item>
        <item>Bank</item>
        <item>Bar</item>
        <item>Beauty Salon</item>
        <item>Book Store</item>
        <item>Bowling Alley</item>
        <item>Bus Station</item>
        <item>Cafe</item>
        <item>Car Rental</item>
        <item>Car Repair</item>
        <item>Car Wash</item>
        <item>Cemetery</item>
        <item>City Hall</item>
        <item>Clothing Store</item>
        <item>Convenience Store</item>
        <item>Courthouse</item>
        <item>Dentist</item>
        <item>Doctor</item>
        <item>Electronics Store</item>
        <item>Embassy</item>
        <item>Florist</item>
        <item>Furniture Store</item>
        <item>Gas Station</item>
        <item>Gym</item>
        <item>Hair Care</item>
        <item>Hospital</item>
        <item>Jewelry Store</item>
        <item>Lawyer</item>
        <item>Library</item>
        <item>Liquor Store</item>
        <item>Local Government Office</item>
        <item>Lodging</item>
        <item>Meal Takeaway</item>
        <item>Movie Theater</item>
        <item>Museum</item>
        <item>Night Club</item>
        <item>Park</item>
        <item>Parking</item>
        <item>Pet Store</item>
        <item>Pharmacy</item>
        <item>Police</item>
        <item>Post Office</item>
        <item>Restaurant</item>
        <item>School</item>
        <item>Shoe Store</item>
        <item>Shopping Mall</item>
        <item>Spa</item>
        <item>Stadium</item>
        <item>Store</item>
        <item>Supermarket</item>
        <item>Synagogue</item>
        <item>Train Station</item>
        <item>Transit Station</item>
        <item>Travel Agency</item>
        <item>Veterinary Care</item>
        <item>Zoo</item>
    </string-array>

    <string-array name="map_type">
        <item>Normal</item>
        <item>Satellite</item>
        <item>Terrain</item>
        <item>Hybrid</item>
    </string-array>

    <string-array name="unit_list_pref">
        <item>Kilometer</item>
        <item>Miles</item>
    </string-array>

    <string-array name="unit_list_pref_key">
        <item>0</item>
        <item>1</item>
    </string-array>

</resources>
