<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/list_background"
    tools:context="com.shlominet.myplaces01.ListFragment">

    <LinearLayout
        android:id="@+id/linearlayout_1"
        android:focusableInTouchMode="true"
        android:descendantFocusability="beforeDescendants"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/list_search_et"
            android:paddingHorizontal="12dp"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/pizza_in_haifa" />

        <Button
            android:id="@+id/list_search_btn"
            android:background="@drawable/icon_bacground"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/search" />

    </LinearLayout>

    <View
        android:id="@+id/line"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearlayout_1"
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="@android:color/holo_orange_dark"/>



    <LinearLayout
        android:id="@+id/linearlayout_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line">


        <Spinner
            android:id="@+id/list_nearme_spinner"
            android:layout_weight="3.5"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:entries="@array/types_spinner" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_weight="2.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_gravity="center"
                android:text="@string/radius_m"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/list_radius_m_btn"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:gravity="bottom"
                    android:layout_gravity="center"
                    android:background="@drawable/remove_black_18dp"/>
                <TextView
                    android:id="@+id/list_radius_tv"
                    android:layout_marginHorizontal="5dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/_1000"
                    android:layout_width="40dp"
                    android:layout_height="20dp" />
                <Button
                    android:id="@+id/list_radius_p_btn"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:gravity="bottom"
                    android:layout_gravity="center"
                    android:background="@drawable/add_black_18dp"/>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/list_nearme_btn"
            android:background="@drawable/icon_bacground"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/near_me"
            android:textSize="12sp" />

    </LinearLayout>


    <View
        android:id="@+id/line2"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearlayout_2"
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="@android:color/darker_gray"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/list_recyclerview"
        android:layout_width="0dp"
        android:layout_height="326dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line2"
        app:layout_constraintVertical_bias="0.0"/>

</android.support.constraint.ConstraintLayout>